# lmorandomizer

./: .gitignore  .travis.yml  Cargo.toml  README.md  package-lock.json  package.json  tauri.code-workspace  tsconfig.json  tslint.json  webpack.config.js
.github/workflows/: ci.yml  ci_test.yml
.zed/: settings.json
crates/addr-map-macro/: Cargo.toml
crates/addr-map-macro/src/: attr.rs  codegen.rs  lib.rs  parse.rs  types.rs  util.rs
crates/lmorandomizer-lib/: Cargo.toml
crates/lmorandomizer-lib/assets/: addr_map.toml
crates/lmorandomizer-lib/src/: hook_utils.rs  lib.rs  tracing_helper.rs
crates/lmorandomizer-lib/src/app/: lmo_randomizer_helper.rs  mod.rs
crates/lmorandomizer-lib/src/hook/: handle.rs  hook_manager.rs  mod.rs
crates/lmorandomizer-shared/: Cargo.toml
crates/lmorandomizer-shared/src/: lib.rs
crates/lmorandomizer-shared/src/ipc/: listener.rs  mod.rs  stream.rs
crates/lmorandomizer-shared/src/lmo/: equipment.rs  flags.rs  mod.rs  others.rs  rom.rs
public/res/: chests.yml  events.yml  seals.yml  shops.yml  weapons.yml
rust-src/: codec.rs  helper.rs  lib.rs
src/: App.ts  assert.ts  index.ts  macmenu.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/res/: 00_Surface.yml  01_Gate_of_Guidance.yml  02_Mausoleum_of_the_Giants.yml  03_Temple_of_the_Sun.yml  04_Spring_in_the_Sky.yml  05_Inferno_Cavern.yml  06_Chamber_of_Extinction.yml  07_Twin_Labyrinths_Left.yml  08_Endless_Corridor.yml  09_Shrine_of_the_Mother.yml  11_Gate_of_Illusion.yml  12_Graveyard_of_the_Giants.yml  13_Temple_of_Moonlight.yml  14_Tower_of_the_Goddess.yml  15_Tower_of_Ruin.yml  16_Chamber_of_Birth.yml  17_Twin_Labyrinths_Right.yml  18_Dimensional_Corridor.yml  19_True_Shrine_of_the_Mother.yml  chests.yml  events.yml  seals.yml  shops.yml  weapons.yml
src-tauri/src/: app.rs  codec.rs  dataset.rs  main.rs  randomizer.rs  script.rs  talk.rs  util.rs
src-tauri/src/app/: file.rs  initial_data.rs  launch.rs  mod.rs
src-tauri/src/dataset/: assertions.rs  create_source.rs  files.rs  game_structure.rs  get_all_items.rs  item.rs  merge_events.rs  mod.rs  spot.rs  storage.rs  supplements.rs
src-tauri/src/dataset/spot/: chest_spot.rs  internal.rs  main_weapon_spot.rs  mod.rs  params.rs  rom_spot.rs  seal_spot.rs  shop_spot.rs  sub_weapon_spot.rs  talk_spot.rs
src-tauri/src/launcher/: debugger.rs  dll_injection.rs  find_func_addr.rs  mod.rs  utils.rs
src-tauri/src/randomizer/: items.rs  items_pool.rs  items_spots.rs  mod.rs  pickup_items.rs  randomize_items.rs  shuffle_utils.rs  sphere.rs  spoiler.rs  spoiler_log.rs  storage.rs  validate.rs
src-tauri/src/randomizer/spoiler/: items.rs  items_pool.rs  items_spots.rs  mod.rs  regions.rs  sphere.rs  spots.rs
src-tauri/src/randomizer/spoiler/items_pool/: items.rs  mod.rs
src-tauri/src/randomizer/spoiler/sphere/: mod.rs  pre_sphere.rs  state.rs
src-tauri/src/randomizer/storage/: assertions.rs  create_source.rs  item.rs  mod.rs
src-tauri/src/script/: consts.rs  dat.rs  data.rs  editor.rs  enums.rs  format.rs  items.rs
src-tauri/src/script/data/: add_starting_items.rs  consts.rs  item.rs  items.rs  mod.rs  object.rs  objectfactory.rs  objects_factory.rs  script.rs  script_editor.rs  scripteditor.rs  shop_items_data.rs  talk.rs  talks_editor.rs
src-tauri/src/script/data/items/: equipment.rs  others.rs
src-tauri/src/script/data/object/: field_objects.rs  mod.rs  shop_object.rs  starts.rs  weapon_objects.rs
src-tauri/src/script/data/objects_factory/: object_factory.rs
src-tauri/src/script/editor/: add_starting_items.rs  consts.rs  mod.rs  objects_factory.rs  replace_talk_items.rs  script_editor.rs  talks_editor.rs
src-tauri/src/script/editor/objects_factory/: mod.rs  object_factory.rs
src-tauri/src/script/enums/: others.rs  rom.rs
src-tauri/src/script/file/: dat.rs  mod.rs  scriptconverter.rs  scripttxtparser.rs
src-tauri/src/script/format/: scriptconverter.rs  scripttxtparser.rs  shop_items_data.rs
src-tauri/src/util/: scriptdat.rs
src-tauri/src/util/scriptdat/: data.rs  format.rs
src-tauri/src/util/scriptdat/data/: add_starting_items.rs  lm_object.rs  objectfactory.rs  script.rs  scripteditor.rs
src-tauri/src/util/scriptdat/format/: codec.rs  scriptconverter.rs  scripttxtparser.rs  shop_items_data.rs
src/app/: randomize.ts
src/applications/: App.ts  randomize.ts
src/components/: Difficulty.tsx  Index.tsx
src/containers/: Index.tsx
src/domains/model/dataset/: Item.ts  Spot.ts  Storage.ts  Supplements.ts  createSource.ts  getAllItems.ts
src/domains/model/randomizer/: randomizeItems.ts  shuffleUtils.ts  validate.ts
src/infrastructures/: ScriptDatRepo.ts
src/model/dataset/: Item.ts  Spot.ts  Storage.ts  Supplements.ts  createSource.ts  getAllItems.ts  types.ts  utils.ts
src/model/randomizer/: codec.ts  fields.ts  items.ts  randomize.ts  randomizeItems.ts  shuffleutils.ts  validate.ts
src/model/randomizer/definitions/: chests.ts  conditions.ts  factory.ts  places.ts
src/public/: index.html
src/public/js/: index.tsx  module.ts  randomizer.ts
src/public/js/applications/: App.ts  app.ts  randomize.ts
src/public/js/components/: Index.tsx
src/public/js/containers/: Index.tsx
src/public/res/: chests.yml  events.yml  seals.yml  shops.yml  weapons.yml
src/repo/: ScriptDatRepo.ts  SettingsRepo.ts  SupplementsRepo.ts
src/res/: chests.yml  dependencies.yml  events.yml  seals.yml  shops.yml  weapons.yml
src/util/scriptdat/: Script.ts  ScriptDat.ts  ScriptDatRepo.ts  ShopItemsData.ts  addStartingItems.ts  codec.ts  createScriptDat.ts  objectfactory.ts  scripteditor.ts  scripttxtparser.ts  tagsfactory.ts  utils.ts
(+37 files in other folders)
