[workspace]
resolver = "2"
members = [
    "crates/addr-map-macro",
    "crates/lmorandomizer-lib",
    "crates/lmorandomizer-shared",
    "src-tauri",
]
default-members = ["crates/lmorandomizer-lib", "src-tauri"]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
addr-map-macro = { path = "crates/addr-map-macro" }
anyhow = "1.0.102"
futures = "0.3.32"
hex = "0.4.3"
lmorandomizer-shared = { path = "crates/lmorandomizer-shared" }
log = "0.4.29"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.6"
rand_seeder = "0.3.0"
rand_xoshiro = "0.6.0"
regex = "1.12.3"
rmp-serde = "1.3.1"
scraper = "0.26.0"
semver = "*"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1"
serde_yaml = "0.9.34"
sha3 = "0.11.0"
smol = "2.0.2"
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.1", features = ["fs", "macros"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
vec1 = "1.12.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Wdk_System_Threading",
] }
