[package]
name = "lmorandomizer"
version = "0.0.0"
description = "A Tauri App"
edition = "2021"
default-run = "lmorandomizer"

[[bin]]
name = "lmorandomizer"
path = "src/main.rs"

[[bin]]
name = "lmocodec"
path = "src/codec.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
hex = "0.4.3"
log = "0.4.29"
num-derive = "0.4.2"
num-traits = "0.2.19"
rand = "0.8.5"
rand_seeder = "0.3.0"
rand_xoshiro = "0.6.0"
regex = "1.12.3"
scraper = "0.25.0"
semver = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
sha3 = "0.10.8"
strum = { version = "0.28.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
tokio = { version = "1.50.0", features = ["fs", "macros"] }
vec1 = "1.12.1"
