[package]
name = "lmorandomizer"
version.workspace = true
description = "A Tauri App"
edition.workspace = true
default-run = "lmorandomizer"

[[bin]]
name = "lmorandomizer"
path = "src/main.rs"

[[bin]]
name = "lmocodec"
path = "src/codec.rs"

[[bin]]
name = "lmotalk"
path = "src/talk.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow.workspace = true
futures.workspace = true
hex.workspace = true
lmorandomizer-shared.workspace = true
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_seeder.workspace = true
rand_xoshiro.workspace = true
regex.workspace = true
rmp-serde.workspace = true
scraper.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha3.workspace = true
smol.workspace = true
strum.workspace = true
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
tokio.workspace = true
vec1.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
