[package]
name = "lmorandomizer-lib"
version.workspace = true
edition.workspace = true

[lib]
name = "hook"
crate-type = ['cdylib']

[dependencies]
addr-map-macro.workspace = true
anyhow.workspace = true
lmorandomizer-shared.workspace = true
rmp-serde.workspace = true
smol.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
