[package]
name = "lmorandomizer-shared"
version.workspace = true
edition.workspace = true

[dependencies]
futures.workspace = true
num-derive.workspace = true
num-traits.workspace = true
serde.workspace = true
serde-big-array.workspace = true
smol.workspace = true
strum.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true
